Refactored DomainEvent classes with support for automatic setting of Key and Version.

--- a/src/Kingo.MessageProcessor.Tests/03.Kingo.MessageProcessor.Tests.csproj
+++ b/src/Kingo.MessageProcessor.Tests/03.Kingo.MessageProcessor.Tests.csproj
@@ -44,6 +44,10 @@
     <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=10.0.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.10.0.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Moq">
       <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
     </Reference>
