Simplified and refactored DomainEvent- and EventStream-related features.

--- a/src/Kingo.MessageProcessor/04.Kingo.MessageProcessor.csproj
+++ b/src/Kingo.MessageProcessor/04.Kingo.MessageProcessor.csproj
@@ -68,30 +68,31 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
+    <Compile Include="Messaging\Domain\DomainEventToPublish.T2.cs" />
+    <Compile Include="Messaging\Domain\DomainEventToPublish.T3.cs" />
+    <Compile Include="Messaging\Domain\IEventStream.T2.cs" />
     <Compile Include="Messaging\Domain\ValueObject.T1.cs" />
     <Compile Include="Messaging\LayerConfiguration.cs" />
     <Compile Include="Messaging\DependencyConfiguration.cs" />
     <Compile Include="Messaging\Domain\Aggregate.T1.cs" />
     <Compile Include="Messaging\Domain\DelegateTypeToContractMap.cs" />
-    <Compile Include="Messaging\Domain\EventStream.cs" />
-    <Compile Include="Messaging\Domain\EventStreamFactory.T2.cs" />
-    <Compile Include="Messaging\Domain\AggregateRoot.cs" />
+    <Compile Include="Messaging\Domain\EventStreamHistory.T2.cs" />
     <Compile Include="Messaging\Domain\AggregateSet.T1.cs" />
     <Compile Include="Messaging\Domain\ConcurrencyException.cs" />
-    <Compile Include="Messaging\Domain\DomainEventStream.T2.cs" />
+    <Compile Include="Messaging\Domain\DomainEventBus.T2.cs" />
     <Compile Include="Messaging\Domain\DuplicateKeyException.T2.cs" />
     <Compile Include="Messaging\Domain\EventStore.T3.cs" />
-    <Compile Include="Messaging\Domain\Event.T2.cs" />
+    <Compile Include="Messaging\Domain\EventToSave.T2.cs" />
     <Compile Include="Messaging\Domain\IAggregateRoot.T2.cs" />
     <Compile Include="Messaging\Domain\IRepository.T2.cs" />
-    <Compile Include="Messaging\Domain\ISnapshot.T2.cs" />
+    <Compile Include="Messaging\Domain\IMemento.T2.cs" />
     <Compile Include="Messaging\ITypeToContractMap.cs" />
     <Compile Include="Messaging\Domain\SnapshotRepository.T3.cs" />
     <Compile Include="Messaging\ClassAndMethodAttributeProvider.cs" />
     <Compile Include="Messaging\Domain\AggregateNotFoundByKeyException.T2.cs" />
     <Compile Include="Messaging\Domain\Entity.T1.cs" />
-    <Compile Include="Messaging\Domain\Snapshot.T2.cs" />
-    <Compile Include="Messaging\Domain\SnapshotOrEvent.T2.cs" />
+    <Compile Include="Messaging\Domain\SnapshotToSave.T2.cs" />
+    <Compile Include="Messaging\Domain\SnapshotOrEventToSave.T2.cs" />
     <Compile Include="Messaging\TypeToContractMap.cs" />
     <Compile Include="Messaging\TypeToContractMapException.cs" />
     <Compile Include="Messaging\EmptySequence.cs" />
@@ -144,7 +145,6 @@
     <Compile Include="CompositeConnection.cs" />
     <Compile Include="Messaging\DependencyClass.cs" />
     <Compile Include="Messaging\Domain\AggregateNotFoundException.cs" />
-    <Compile Include="Messaging\Domain\EventBuffer.T3.cs" />
     <Compile Include="Messaging\Domain\AggregateRoot.T2.cs" />
     <Compile Include="Messaging\QueryDelegate.T2.cs" />
     <Compile Include="Messaging\IMessageProcessorBusConnection.cs" />
@@ -153,11 +153,8 @@
     <Compile Include="Messaging\MessageValidationModule.cs" />
     <Compile Include="Messaging\Domain\Repository.T3.cs" />
     <Compile Include="Messaging\Domain\EventStream.T2.cs" />
-    <Compile Include="Messaging\Domain\IEventBuffer.T2.cs" />
-    <Compile Include="Messaging\Domain\IReadableEventStream.T2.cs" />
-    <Compile Include="Messaging\Domain\IWritableEventStream.T2.cs" />
-    <Compile Include="Messaging\Domain\MemoryEventStream.T2.cs" />
-    <Compile Include="Messaging\EventBuffer.T1.cs" />
+    <Compile Include="Messaging\Domain\IDomainEventToPublish.T2.cs" />
+    <Compile Include="Messaging\EventToPublish.T1.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="IConnection.cs" />
     <Compile Include="Messaging\IMessageHandler.T1.cs" />
@@ -172,11 +169,11 @@
     <Compile Include="Messaging\MessageProcessorBusConnection.T1.cs" />
     <Compile Include="Messaging\MessagePointer.cs" />
     <Compile Include="Messaging\DependencyCacheEntry.T1.cs" />
-    <Compile Include="Messaging\DomainEventBus.cs" />
-    <Compile Include="Messaging\IEventBuffer.cs" />
+    <Compile Include="Messaging\UnitOfWorkBus.cs" />
+    <Compile Include="Messaging\IEventToPublish.cs" />
     <Compile Include="Messaging\IDependencyCache.cs" />
     <Compile Include="Messaging\IDependencyCacheEntry.T1.cs" />
-    <Compile Include="Messaging\IDomainEventBus.cs" />
+    <Compile Include="Messaging\Domain\IDomainEventBus.T2.cs" />
     <Compile Include="Messaging\UnitOfWorkController.cs" />
     <Compile Include="Messaging\IUnitOfWork.cs" />
     <Compile Include="Messaging\UnitOfWorkContext.cs" />
