Implemented Rook-scenarios and added A(lternate) and H(appy) flow prefixes for scenarios.

--- a/examples/Server.Tests/01.Server.Tests.csproj
+++ b/examples/Server.Tests/01.Server.Tests.csproj
@@ -103,26 +103,34 @@
     <Compile Include="Games\ForfeitGame\GameNotFoundScenario.cs" />
     <Compile Include="Games\ForfeitGame\SenderIsNoPlayerScenario.cs" />
     <Compile Include="Games\InMemoryGameRepository.cs" />
-    <Compile Include="Games\MovePiece\EmptySquareScenario.cs" />
-    <Compile Include="Games\MovePiece\GameNotFoundScenario.cs" />
+    <Compile Include="Games\MovePiece\A.EmptySquareScenario.cs" />
+    <Compile Include="Games\MovePiece\A.GameNotFoundScenario.cs" />
     <Compile Include="Games\MovePiece\MovePieceScenario.cs" />
-    <Compile Include="Games\MovePiece\NotPlayersTurnScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\EnPassantHitOfPawnThatTookTwoSingleStepsScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\EnPassantHitTooLateScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\EnPassantHitScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\HitRightScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\HitLeftScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\HitOfEmptySquareScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\OneStepOfPawnThatWasHitEnPassantScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\TwoStepBlockedByPieceInPathScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\TwoStepBlockedByPieceOnTargetScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\OneStepBlockedByPieceOnTargetScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\OneStepSecondMoveOfPawnScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\TwoStepSecondMoveOfPawnScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\TwoStepFirstMoveOfPawnScenario.cs" />
-    <Compile Include="Games\MovePiece\Pawns\OneStepFirstMoveOfPawnScenario.cs" />
-    <Compile Include="Games\MovePiece\SenderIsNoPlayerScenario.cs" />
-    <Compile Include="Games\MovePiece\WrongColorOfPieceScenario.cs" />
+    <Compile Include="Games\MovePiece\A.NotPlayersTurnScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.EnPassantHitOfPawnThatTookTwoSingleStepsScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.EnPassantHitTooLateScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\H.EnPassantHitScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\H.HitRightScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\H.HitLeftScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.HitOfEmptySquareScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.IllegalPawnMoveScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.OneStepOfPawnThatWasHitEnPassantScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.TwoStepBlockedByPieceInPathScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.TwoStepBlockedByPieceOnTargetScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.OneStepBlockedByPieceOnTargetScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\H.OneStepSecondMoveOfPawnScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\A.TwoStepSecondMoveOfPawnScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\H.TwoStepFirstMoveOfPawnScenario.cs" />
+    <Compile Include="Games\MovePiece\Pawns\H.OneStepFirstMoveOfPawnScenario.cs" />
+    <Compile Include="Games\MovePiece\Rooks\H.HitScenario.cs" />
+    <Compile Include="Games\MovePiece\Rooks\A.IllegalRookMoveScenario.cs" />
+    <Compile Include="Games\MovePiece\Rooks\A.OneStepBlockedByOwnPieceScenario.cs" />
+    <Compile Include="Games\MovePiece\Rooks\H.SixStepsLeftScenario.cs" />
+    <Compile Include="Games\MovePiece\Rooks\H.SevenStepsRightScenario.cs" />
+    <Compile Include="Games\MovePiece\Rooks\A.TwoStepsBlockedByOwnPieceScenario.cs" />
+    <Compile Include="Games\MovePiece\Rooks\H.TwoStepsFowardScenario.cs" />
+    <Compile Include="Games\MovePiece\A.SenderIsNoPlayerScenario.cs" />
+    <Compile Include="Games\MovePiece\A.WrongColorOfPieceScenario.cs" />
     <Compile Include="Players\RegisterPlayer\PlayerIsRegisteredScenario.cs" />
     <Compile Include="Players\RegisterPlayer\PlayerAlreadyRegisteredScenario.cs" />
     <Compile Include="Players\InMemoryPlayerRepository.cs" />
@@ -158,7 +166,6 @@
     <Folder Include="Games\MovePiece\Kings\" />
     <Folder Include="Games\MovePiece\Knights\" />
     <Folder Include="Games\MovePiece\Queens\" />
-    <Folder Include="Games\MovePiece\Rooks\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
