--- a/examples/Server.Api/02.Server.Api.csproj
+++ b/examples/Server.Api/02.Server.Api.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Challenges\PlayerChallengedEvent.cs" />
     <Compile Include="Challenges\RejectChallengeCommand.cs" />
     <Compile Include="Games\ActiveGame.cs" />
+    <Compile Include="Games\EnPassantHitEvent.cs" />
     <Compile Include="Games\ForfeitGameCommand.cs" />
     <Compile Include="Games\GameForfeitedEvent.cs" />
     <Compile Include="Games\GameStartedEvent.cs" />
